[gd_scene load_steps=12 format=3 uid="uid://cfl0h6ix3sja5"]

[ext_resource type="Script" uid="uid://bv3077r0cgx6b" path="res://scenes/targetBlock/target_block.gd" id="1_8e51x"]
[ext_resource type="Texture2D" uid="uid://cci8y4vevusan" path="res://assets/block/targetBlock.png" id="1_ixwc8"]
[ext_resource type="Texture2D" uid="uid://bcik4tx4y6gwv" path="res://assets/fire/circle.png" id="3_kpch4"]
[ext_resource type="FontFile" uid="uid://bka8tcryaxc2v" path="res://assets/fonts/static/RobotoMono-Medium.ttf" id="3_nhjfx"]
[ext_resource type="AudioStream" uid="uid://bxdu2osprq1h3" path="res://assets/fire_default/burn.mp3" id="5_x2woy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8e51x"]
radius = 14.0357

[sub_resource type="Gradient" id="Gradient_nhjfx"]
offsets = PackedFloat32Array(0, 0.989691)
colors = PackedColorArray(0.172549, 0, 0, 1, 1, 1, 0.329412, 0.666667)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_x2woy"]
gradient = SubResource("Gradient_nhjfx")

[sub_resource type="Curve" id="Curve_hxqkc"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_8m7uu"]
curve = SubResource("Curve_hxqkc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mh5xc"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 4.1
angle_min = -546.2
angle_max = 340.8
angular_velocity_min = -720.0
angular_velocity_max = 720.0
gravity = Vector3(0, -120, 0)
scale_curve = SubResource("CurveTexture_8m7uu")
color_ramp = SubResource("GradientTexture1D_x2woy")

[node name="TargetBlock" type="Area2D"]
modulate = Color(1.3, 1.3, 1.3, 1)
collision_layer = 16
script = ExtResource("1_8e51x")

[node name="TargetBlock" type="Sprite2D" parent="."]
scale = Vector2(0.11, 0.11)
texture = ExtResource("1_ixwc8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8e51x")

[node name="HPBar" type="Node2D" parent="."]

[node name="FullHP" type="ColorRect" parent="HPBar"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.895
offset_right = 20.0
offset_bottom = -20.29
grow_horizontal = 2
grow_vertical = 0

[node name="HP" type="ColorRect" parent="HPBar/FullHP"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HPBar" type="Label" parent="HPBar"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -49.0
offset_right = 43.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.505, 0.505)
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_nhjfx")
theme_override_font_sizes/font_size = 20
text = "hp"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BurnAnimation" type="GPUParticles2D" parent="."]
self_modulate = Color(1.2, 1.2, 1.2, 1)
emitting = false
amount = 10
texture = ExtResource("3_kpch4")
one_shot = true
process_material = SubResource("ParticleProcessMaterial_mh5xc")

[node name="BurnSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_x2woy")
volume_db = -25.0

[connection signal="finished" from="BurnAnimation" to="." method="_on_burn_animation_finished"]
